--- a/app.json
+++ b/app.json
@@ -8,6 +8,9 @@
         },
         {
           "url": "https://github.com/heroku/heroku-buildpack-xvfb-google-chrome"
+        },
+        {
+          "url": "https://github.com/heroku/heroku-buildpack-java"
         }
       ],
       "scripts": {
