--- a/pom.xml
+++ b/pom.xml
@@ -1,12 +1,12 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>io.ddavison</groupId>
+  <groupId>com.github.willowtreeapps</groupId>
   <artifactId>conductor</artifactId>
   <packaging>jar</packaging>
 
   <name>conductor</name>
-  <url>http://github.com/conductor-framework/conductor</url>
-  <version>2.6.0</version>
+  <url>http://github.com/willowtreeapps/conductor</url>
+  <version>2.7.0</version>
   <description>A quick and easy start-up browser automation framework based on Selenium WebDriver</description>
 
     <parent>
