--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,6 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
+
   <groupId>com.github.willowtreeapps</groupId>
   <artifactId>conductor</artifactId>
   <packaging>jar</packaging>
@@ -86,7 +87,7 @@
     </build>
 
     <scm>
-        <url>http://github.com/conductor-framework/conductor</url>
+        <url>https://github.com/willowtreeapps/conductor</url>
     </scm>
 
     <properties>
@@ -196,6 +197,12 @@
             <groupId>io.github.bonigarcia</groupId>
             <artifactId>webdrivermanager</artifactId>
             <version>1.7.2</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.yaml</groupId>
+            <artifactId>snakeyaml</artifactId>
+            <version>1.19</version>
         </dependency>
     </dependencies>
 </project>
