--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
 
   <name>conductor</name>
   <url>http://github.com/willowtreeapps/conductor</url>
-  <version>2.7.0</version>
+  <version>3.0.0</version>
   <description>A quick and easy start-up browser automation framework based on Selenium WebDriver</description>
 
     <parent>
@@ -177,14 +177,9 @@
 
         <!-- logging -->
         <dependency>
-            <groupId>org.apache.logging.log4j</groupId>
-            <artifactId>log4j-api</artifactId>
-            <version>2.0.2</version>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.logging.log4j</groupId>
-            <artifactId>log4j-core</artifactId>
-            <version>2.0.2</version>
+            <groupId>org.tinylog</groupId>
+            <artifactId>tinylog</artifactId>
+            <version>1.3.1</version>
         </dependency>
         <dependency> <!-- Required for webdrivermanager logging -->
             <groupId>org.apache.logging.log4j</groupId>
