--- a/pom.xml
+++ b/pom.xml
@@ -106,6 +106,11 @@
             <version>4.10</version>
         </dependency>
         <dependency>
+            <groupId>org.testng</groupId>
+            <artifactId>testng</artifactId>
+            <version>6.11</version>
+        </dependency>
+        <dependency>
             <groupId>com.github.detro</groupId>
             <artifactId>phantomjsdriver</artifactId>
             <version>${phantomjs_version}</version>
