--- a/pom.xml
+++ b/pom.xml
@@ -100,6 +100,7 @@
     </properties>
 
     <dependencies>
+        <!--Testing Frameworks-->
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
@@ -110,11 +111,7 @@
             <artifactId>testng</artifactId>
             <version>6.11</version>
         </dependency>
-        <dependency>
-            <groupId>com.github.detro</groupId>
-            <artifactId>phantomjsdriver</artifactId>
-            <version>${phantomjs_version}</version>
-        </dependency>
+
         <dependency>
             <groupId>org.seleniumhq.selenium</groupId>
             <artifactId>selenium-java</artifactId>
